feat: add transcode empty dir to plex

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -68,6 +68,8 @@ spec:
       config:
         enabled: true
         existingClaim: plex-config-pvc
+      transcode:
+        enabled: true
       nfs-media-pvc:
         enabled: true
         existingClaim: nfs-media-pvc
