--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -70,6 +70,7 @@ spec:
         existingClaim: plex-config-pvc
       transcode:
         enabled: true
+        type: emptyDir
       nfs-media-pvc:
         enabled: true
         existingClaim: nfs-media-pvc
