--- a/cluster/apps/default/plex/nfs-media.yaml
+++ b/cluster/apps/default/plex/nfs-media.yaml
@@ -14,13 +14,20 @@ spec:
     server: 192.168.1.201
     path: /srv/nfs/media
   # Explanation of mount options https://www.thegeekdiary.com/common-nfs-mount-options-in-linux/
-#  mountOptions:
-#    - nfsvers=3
-#    - tcp
-#    - intr
-#    - hard
-#    - noatime
-#    - nodiratime
+  mountOptions:
+    - auto
+    - ro
+    - noatime
+    - nolock
+    - bg
+    - soft
+    - nfsvers=4
+    - intr
+    - tcp
+    - timeo=50
+    - retrans=5
+    - actimeo=10
+    - retry=5 0 0
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
