feat(plex): add "async" option to nfs-media pv

--- a/cluster/apps/default/plex/nfs-media.yaml
+++ b/cluster/apps/default/plex/nfs-media.yaml
@@ -15,6 +15,7 @@ spec:
     path: /srv/nfs/media
   # Explanation of mount options https://www.thegeekdiary.com/common-nfs-mount-options-in-linux/
   mountOptions:
+    - async
     - auto
     - ro
     - noatime
