--- a/cluster/apps/default/plex/nfs-media.yaml
+++ b/cluster/apps/default/plex/nfs-media.yaml
@@ -15,13 +15,13 @@ spec:
     path: /srv/nfs/media
   # Explanation of mount options https://www.thegeekdiary.com/common-nfs-mount-options-in-linux/
   mountOptions:
-    - sys
+    - nfsvers=3
+    - tcp
     - intr
+    - hard
+    - noatime
+    - nodiratime
     - local_lock=posix
-    - ro
-    - vers=3
-    - auto
-    - nofail 0 0
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
