fix(plex): replace nfs server with hostPath

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -73,7 +73,8 @@ spec:
         type: emptyDir
       nfs-media-pvc:
         enabled: true
-        existingClaim: nfs-media-pvc
+        hostPath: "/src/nfs/media"
+        mountPath: "/nfs-media-pvc"
         readOnly: true
 
     # Only run on worker 1
