fix(plex): fix typo in hostPath pvc

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -73,7 +73,7 @@ spec:
         type: emptyDir
       nfs-media-pvc:
         enabled: true
-        hostPath: "/src/nfs/media"
+        hostPath: "/srv/nfs/media"
         mountPath: "/nfs-media-pvc"
         readOnly: true
 
