fix(plex): add missing "type: hostPath" to plex pvc

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -73,6 +73,7 @@ spec:
         type: emptyDir
       nfs-media-pvc:
         enabled: true
+        type: hostPath
         hostPath: "/srv/nfs/media"
         mountPath: "/nfs-media-pvc"
         readOnly: true
