chore(plex): update plex claim

--- a/cluster/apps/default/plex/secret.enc.yaml
+++ b/cluster/apps/default/plex/secret.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:aZU+rMnRdo7GkuRMX2dfEH6VCSKEUPKoWzY=,iv:2vZJI34cuSWcte4ArVuv0juN4eIUDR8FZewlBqHXLRE=,tag:DtYmH1AAZjfoaI/xBqrG3g==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:PC+L+jYFroo2DocJk6pcT5nesUzbn8n3gXI=,iv:HVpt1gEXcojgaEp5eobK4DqdfeZldL1pl9Yrz7UKbL8=,tag:HNbpUd/01h7wsxV/ke34TA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-10-23T15:45:24Z"
-    mac: ENC[AES256_GCM,data:m8DL5jAMsqkVjDyFPbCGs0T+2hGMKyijg8yLCOtN3vxcXzENbvJd8qtCKCYqYUmKCiaUe24/Bi2g3ev1BcltZ4yryrwtrNajC4Z3dcRUP5Nle85YFYY20qvUGCC+PHQFhoHf9CIKplWK1zk/+qjWRc1Zp8KHetJ/3OU2iIH249w=,iv:A3hXsfcO+1wcKx6i89IEf6jKlNWscVSmrxY6lswawio=,tag:PRIpBYGH9tXgPt2QKPZRBQ==,type:str]
+    lastmodified: "2021-10-24T13:15:39Z"
+    mac: ENC[AES256_GCM,data:S1rvMu5qMoInPUW4FSeHGzC3J2ZvwgFHu4OQa00VNG9Mu0ftX1NqTtsgFBAAzq2amP57dGxu/+490pH7QRAGwfi4S/OU7sv8isAPcoygNFyVcC5WoZ/Bye6lDxODjtC20DQCReymdFPwIdcDo2QXK8rAsXT4RWmUnFms4owlhik=,iv:1rCLkvm1uxkbfnwCD+GVLo5qsdnET0ZUPPXIooxKTcc=,tag:81K3g5c2M2ajzQYx6zLM2A==,type:str]
     pgp:
-        - created_at: "2021-10-23T15:45:23Z"
+        - created_at: "2021-10-24T13:15:38Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv8CjLGzsyUJIw1bilOAENH8/o5a2DpKsUb0Z6PlLpLqgFx
-            Y1JnV9h/La/0rmQ6VypKJORUWdZXd86//bd6Yg9X+OhIG8vZGat3I2HQzZFh1rnF
-            YTX9C+5v+LVsdHU/13QEOLPW9Q0Qo2rZpW7k/yFhNbIYDAbgkuhX19qtywpYriq7
-            q3v8ZzQV8/d/H8sgiwz57aeyncW0QtiAi+JZ09ZDlxwZkKSKa3u77yQjBg0u0/dN
-            g0fIx4BbpX+Y6rmP2pcu/CTyhJHYxsqVUy9p9Xnzg+w+pQ4Z4z4gJUnEn/94f0ml
-            FQqTujPWssntEokp7ajMUcMfDHOVTUfdKcR73+ZFl5vKDgkw2nVkuKu3PKeTjWmy
-            MZXCEbDRXZhBQoyC0/g7VdsBGzWWYq/6p5k0iHLwMGxNxd8BtNORu34jCK0xKvF4
-            S11Z5Myx5IVIzmw8jYBTqH3lZsb2OEi3fmX015BPqmqt91lzuXYRWf084bGGYqx5
-            DF0a0BbGFZ0kDuRsSEjL0l4BtEYJGJH53gmPsn1tTza82zqxhVnw0YUKZ3wxqRCq
-            I9qvkMDfuktfd5VlfDnVWG43bk4ZHzPqfgaejL8gdWlQyPkG1GEfu00WtycuRV95
-            FqTgclHdcQ/5qTFe3bIS
-            =QzLG
+            hQGMA71EESEn7N2iAQv/QAvZDJFZ0mgNU/nR2xiRzuSijnTmquURC0VCBKLM05sV
+            MQ0sn1FEwVhjPmgLZixBfMRqhj3EMtprgWbI7TEKPR/6ZFXvHQ9LcV9ipiUi/r9J
+            VnvYxahurOaGfDCtmupTgPcEpy6goSKH2m3ukUe6ULF2KvaZZ8NbF6jPnGMh4HzA
+            VcBf6lIcwxnoR48oURwEyC82Kl0IxaUxFeb6vC3mTNDThJXVBK8bK3x+elKOQBZi
+            4PjFAVBGOs4wCId1J69rhvPyCqfMulKzSpIuj9Puhkj1xCSx6XXl9pMt6MUyBv70
+            57dX7uXrfMmW4lzo2TdIyHeJKUIa5/0Vr1Lhy5XBe5Wy2p/nc8+AOdarxhEuBMER
+            Sep1rcXIb9JFSPAoliY3GbmR/L9CssGrqy8OJi4vXsBlEASUx2WbtdG9BCXnl+LT
+            dTcGAIQlmPlVK+47rmrROQ4Zzxn3A/f/PAXtVWewKoWjk30d0PYZaP4yxRN5fHwm
+            ZTBqVtq/9UdTDM+zahAM0l4BcSEiP0R5qf1oDyaSKv2F8YQf6lBOyl+xLO0vM0RU
+            agpYoQSXtsHK+yGqNhsO3uTiKhc9woYAklOG2pv6fYqtbbFCH18aw1RVT7vsHb2v
+            Sfan4CS+3nIxhEyscx/C
+            =BhA9
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
