--- a/cluster/apps/default/plex/pvc.yaml
+++ b/cluster/apps/default/plex/pvc.yaml
@@ -1,12 +1,33 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: plex-config-pv
+spec:
+  capacity:
+    storage: 20Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Delete
+  storageClassName: longhorn
+  csi:
+    driver: driver.longhorn.io
+    fsType: ext4
+    volumeAttributes:
+      numberOfReplicas: '2'
+      staleReplicaTimeout: '2880'
+    volumeHandle: plex-config-csi
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: plex-config-pvc
   namespace: default
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: longhorn
+    - ReadWriteOnce
   resources:
     requests:
       storage: 20Gi
+  volumeName: plex-config-pv
+  storageClassName: longhorn
