fix(plex): attempt at fixing plex not being able to mount csi volume

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -68,7 +68,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: plex-config-pvc
+        existingClaim: plex-csi-config-pvc
       transcode:
         enabled: true
         type: emptyDir
