--- a/cluster/apps/default/plex/pvc.yaml
+++ b/cluster/apps/default/plex/pvc.yaml
@@ -2,6 +2,17 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: plex-config-pv
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: longhorn
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: plex-csi-config-pv
+  namespace: default
 spec:
   capacity:
     storage: 20Gi
@@ -16,12 +27,12 @@ spec:
     volumeAttributes:
       numberOfReplicas: '2'
       staleReplicaTimeout: '2880'
-    volumeHandle: plex-config-csi
+    volumeHandle: plex-config-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: plex-config-pvc
+  name: plex-csi-config-pvc
   namespace: default
 spec:
   accessModes:
@@ -29,5 +40,5 @@ spec:
   resources:
     requests:
       storage: 20Gi
-  volumeName: plex-config-pv
+  volumeName: plex-csi-config-pv
   storageClassName: longhorn
