fix(plex): update pv capacity

--- a/cluster/apps/default/plex/pvc.yaml
+++ b/cluster/apps/default/plex/pvc.yaml
@@ -7,6 +7,8 @@ spec:
   accessModes:
     - ReadWriteOnce
   storageClassName: longhorn
+  capacity:
+    storage: 20Gi
 ---
 apiVersion: v1
 kind: PersistentVolume
