--- a/cluster/apps/default/plex/pvc.yaml
+++ b/cluster/apps/default/plex/pvc.yaml
@@ -1,18 +1,6 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: plex-config-pv
-  namespace: default
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
-  capacity:
-    storage: 20Gi
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
   name: plex-csi-config-pv
   namespace: default
 spec:
@@ -29,7 +17,7 @@ spec:
     volumeAttributes:
       numberOfReplicas: '2'
       staleReplicaTimeout: '2880'
-    volumeHandle: plex-config-pv
+    volumeHandle: plex-config-ui
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
