fix(plex): another attempt at making csi volumes work

--- a/cluster/apps/default/plex/pvc.yaml
+++ b/cluster/apps/default/plex/pvc.yaml
@@ -17,7 +17,7 @@ spec:
     volumeAttributes:
       numberOfReplicas: '2'
       staleReplicaTimeout: '2880'
-    volumeHandle: plex-config-ui
+    volumeHandle: plex-config-csi
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
