fix(plex): make config volume writable in plex's promtail

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -104,6 +104,6 @@ spec:
         volumeMounts:
           - name: config
             mountPath: /config
-            readOnly: true
+#            readOnly: true
         securityContext:
           runAsUser: 0
