fix(plex): change plex claim again

--- a/cluster/apps/default/plex/secret.enc.yaml
+++ b/cluster/apps/default/plex/secret.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:PC+L+jYFroo2DocJk6pcT5nesUzbn8n3gXI=,iv:HVpt1gEXcojgaEp5eobK4DqdfeZldL1pl9Yrz7UKbL8=,tag:HNbpUd/01h7wsxV/ke34TA==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:7gsdgCfVuyGzcJ4M6Lv5ZuOXDD0ROG8TzLI=,iv:90+issEGySyAPu8Tr4N9j6Lg6eKkce0thz4TOAisPoo=,tag:LBbt0RyES/1rG/3kXUuHkA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-10-24T13:15:39Z"
-    mac: ENC[AES256_GCM,data:S1rvMu5qMoInPUW4FSeHGzC3J2ZvwgFHu4OQa00VNG9Mu0ftX1NqTtsgFBAAzq2amP57dGxu/+490pH7QRAGwfi4S/OU7sv8isAPcoygNFyVcC5WoZ/Bye6lDxODjtC20DQCReymdFPwIdcDo2QXK8rAsXT4RWmUnFms4owlhik=,iv:1rCLkvm1uxkbfnwCD+GVLo5qsdnET0ZUPPXIooxKTcc=,tag:81K3g5c2M2ajzQYx6zLM2A==,type:str]
+    lastmodified: "2021-10-24T14:55:16Z"
+    mac: ENC[AES256_GCM,data:N5jmQtRvC3e7QhBbtOI3bwS8JMt1NgLxQMfkjqYujTfVy+hNlY0QY9u5wu+GvyGmpdn9vxwpvHqbxBI7WGV430OdaihD0ak3+3lgZnYrqM6xYN32kq/ANnrxHwvc9lGAEWLlfiZ2KJpEx/xyXpWPVa8a8SEFVlN09KC53uR2xgU=,iv:rsJIQPNnS3FwuTbR/Gm5yNmCTk545I1lsBfuwZLLwME=,tag:QqnLgKFZn/U5MckdNaYaVQ==,type:str]
     pgp:
-        - created_at: "2021-10-24T13:15:38Z"
+        - created_at: "2021-10-24T14:55:15Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/QAvZDJFZ0mgNU/nR2xiRzuSijnTmquURC0VCBKLM05sV
-            MQ0sn1FEwVhjPmgLZixBfMRqhj3EMtprgWbI7TEKPR/6ZFXvHQ9LcV9ipiUi/r9J
-            VnvYxahurOaGfDCtmupTgPcEpy6goSKH2m3ukUe6ULF2KvaZZ8NbF6jPnGMh4HzA
-            VcBf6lIcwxnoR48oURwEyC82Kl0IxaUxFeb6vC3mTNDThJXVBK8bK3x+elKOQBZi
-            4PjFAVBGOs4wCId1J69rhvPyCqfMulKzSpIuj9Puhkj1xCSx6XXl9pMt6MUyBv70
-            57dX7uXrfMmW4lzo2TdIyHeJKUIa5/0Vr1Lhy5XBe5Wy2p/nc8+AOdarxhEuBMER
-            Sep1rcXIb9JFSPAoliY3GbmR/L9CssGrqy8OJi4vXsBlEASUx2WbtdG9BCXnl+LT
-            dTcGAIQlmPlVK+47rmrROQ4Zzxn3A/f/PAXtVWewKoWjk30d0PYZaP4yxRN5fHwm
-            ZTBqVtq/9UdTDM+zahAM0l4BcSEiP0R5qf1oDyaSKv2F8YQf6lBOyl+xLO0vM0RU
-            agpYoQSXtsHK+yGqNhsO3uTiKhc9woYAklOG2pv6fYqtbbFCH18aw1RVT7vsHb2v
-            Sfan4CS+3nIxhEyscx/C
-            =BhA9
+            hQGMA71EESEn7N2iAQv6A7xsxbflj06MI841hD5+1WHX0Au16bzWMs3MJpuW29dX
+            YWO3nAk2jhElD4xQtmMyI/8QHDGOgma+NrqtzDJXeJAFIaNHvfXujkMftiryWFF/
+            L5M0gvQxMgfanwKuVL9wU9+adzU42yF9I1HHk3UggFajbnEXzZeKp5IXzJI/xnBu
+            F5C8JlI5s4YUwhoUYXIyOPx731yuq2KyLoUMsZ/e3rtC7+ueFfIX3U6m+vXJEG1+
+            XojYDxf2Xt868VFW9iRohu38v+84g8Jz7R7bdM1TwxOuJNjvwvhJRddnNCbEUk73
+            gRXw7/XzCaB/QRXiN1jsMHO6CfbmZZ20JXWl4IWqHtTDyXMEPIlT7xIuVOQDOOyy
+            PbvlNo7/g/zToRgyJfdA28yGDlWokHz6xWELe1JFmzbugE8tty4tHv4/qHqYFqWt
+            WVr97Ywcc+3yxTc5/vuqKr2GMZcxMHd8evnhgnQfqTbwmCfMwII+sz7hxg8meSCI
+            DsS6jptO3IhXr5+zIHap0l4BAVhsQfMqBAtz/YdVA6ZOqkG+pE278zvzpSAxej/x
+            wLj5hKADqculLKfw1Q/z+GHXcSm+eR3MHT3JGvK2oPW8b3GTFDiGkxrNKrDsNGy4
+            xbLAFmabr7b3Y8xK9dRv
+            =FFgy
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
