--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -49,7 +49,6 @@ spec:
         enabled: true
         ingressClassName: "nginx"
         annotations:
-          # nginx.ingress.kubernetes.io/backend-protocol: "https"
           nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
@@ -62,10 +61,9 @@ spec:
           - hosts:
               - "plex.${SECRET_DOMAIN}"
 
-    # Enable devices to be discoverable?
-    # hostNetwork: true
-
     persistence:
+      # Settings config to an NFS volume will cause issues and hangs. iSCSI volume should fix the issue.
+      # See https://www.reddit.com/r/PleX/comments/ezbmy0/running_plex_in_kubernetes_finally_working/
       config:
         enabled: true
         existingClaim: plex-csi-config-pvc
@@ -74,9 +72,7 @@ spec:
         type: emptyDir
       nfs-media-pvc:
         enabled: true
-        type: hostPath
-        hostPath: "/srv/nfs/media"
-        mountPath: "/nfs-media-pvc"
+        existingClaim: nfs-media-pvc
         readOnly: true
 
     # Only run on worker 1
@@ -104,6 +100,6 @@ spec:
         volumeMounts:
           - name: config
             mountPath: /config
-#            readOnly: true
+            readOnly: true
         securityContext:
           runAsUser: 0
