--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     # https://github.com/k8s-at-home/charts/blob/master/charts/stable/syncthing/values.yaml
     image:
       repository: sirfragalot/hyperion.ng
-      tag: 2.0.0-alpha.10-aarch64
+      tag: 2.0.12
 
     service:
       flatbuffer:
