--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -38,9 +38,9 @@ spec:
     env:
       - name: WAIT_FOR_VPN
         value: "true"
-    securityContext:
-      runAsUser: 1001
-      runAsGroup: 1001
+#    securityContext:
+#      runAsUser: 1001
+#      runAsGroup: 1001
     persistence:
       config:
         enabled: true
