--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -78,7 +78,8 @@ spec:
       - name: shadowsocks
         image: shadowsocks/shadowsocks-libev:v3.3.5
         command: [ "ss-local" ]
-        args: [ "-s",  "185.213.155.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "mullvad", "-m", "aes-256-gcm" ]
+        # nl-ams-br-001
+        args: [ "-s",  "185.65.134.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "mullvad", "-m", "aes-256-gcm" ]
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 1080
