wip: fix plex not working due to permission errors

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -29,6 +29,7 @@ spec:
       - secretRef:
           name: plex-secrets
     podSecurityContext:
+      fsGroup: 1001
       supplementalGroups:
         - 44
         - 109
