--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -38,6 +38,8 @@ spec:
     env:
       - name: WAIT_FOR_VPN
         value: "true"
+    securityContext:
+      fsGroup: 1001
     persistence:
       config:
         enabled: true
