chore: update plex claim with new one

--- a/cluster/apps/default/plex/secret.enc.yaml
+++ b/cluster/apps/default/plex/secret.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:7gsdgCfVuyGzcJ4M6Lv5ZuOXDD0ROG8TzLI=,iv:90+issEGySyAPu8Tr4N9j6Lg6eKkce0thz4TOAisPoo=,tag:LBbt0RyES/1rG/3kXUuHkA==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:qyZ32ucFSdKMv4mRQ8aMZAF08gXAuzhwNlE=,iv:syzlbwdUxlsgvn6rsD0lSHmYJWXgcyGZSV2UdBfVIbo=,tag:MtdLF7XF2hB30O3Sx48A1g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-10-24T14:55:16Z"
-    mac: ENC[AES256_GCM,data:N5jmQtRvC3e7QhBbtOI3bwS8JMt1NgLxQMfkjqYujTfVy+hNlY0QY9u5wu+GvyGmpdn9vxwpvHqbxBI7WGV430OdaihD0ak3+3lgZnYrqM6xYN32kq/ANnrxHwvc9lGAEWLlfiZ2KJpEx/xyXpWPVa8a8SEFVlN09KC53uR2xgU=,iv:rsJIQPNnS3FwuTbR/Gm5yNmCTk545I1lsBfuwZLLwME=,tag:QqnLgKFZn/U5MckdNaYaVQ==,type:str]
+    lastmodified: "2022-01-23T19:13:47Z"
+    mac: ENC[AES256_GCM,data:bsJoFdmyAVxv7DGyZcwHlsNLWuYwwZon3zjhezgNpiggwGs13WdDa20RxDB/nfzvzXktJM+8XzXendQniA3S3CJ3R2SMti8R17EKsTaSflnnQAnNIUMrDy1m8SioWJeTGjrGzEYpRrITasWS2vRCRajDmKt3ZB6MHqlv17bLNpk=,iv:TxbotcVzyz+NYWfN7uJLbsOWB5dUKPth8f/BIBuEBwM=,tag:UEmv4r5+ENrmy7fFonfeDg==,type:str]
     pgp:
-        - created_at: "2021-10-24T14:55:15Z"
+        - created_at: "2022-01-23T19:13:46Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv6A7xsxbflj06MI841hD5+1WHX0Au16bzWMs3MJpuW29dX
-            YWO3nAk2jhElD4xQtmMyI/8QHDGOgma+NrqtzDJXeJAFIaNHvfXujkMftiryWFF/
-            L5M0gvQxMgfanwKuVL9wU9+adzU42yF9I1HHk3UggFajbnEXzZeKp5IXzJI/xnBu
-            F5C8JlI5s4YUwhoUYXIyOPx731yuq2KyLoUMsZ/e3rtC7+ueFfIX3U6m+vXJEG1+
-            XojYDxf2Xt868VFW9iRohu38v+84g8Jz7R7bdM1TwxOuJNjvwvhJRddnNCbEUk73
-            gRXw7/XzCaB/QRXiN1jsMHO6CfbmZZ20JXWl4IWqHtTDyXMEPIlT7xIuVOQDOOyy
-            PbvlNo7/g/zToRgyJfdA28yGDlWokHz6xWELe1JFmzbugE8tty4tHv4/qHqYFqWt
-            WVr97Ywcc+3yxTc5/vuqKr2GMZcxMHd8evnhgnQfqTbwmCfMwII+sz7hxg8meSCI
-            DsS6jptO3IhXr5+zIHap0l4BAVhsQfMqBAtz/YdVA6ZOqkG+pE278zvzpSAxej/x
-            wLj5hKADqculLKfw1Q/z+GHXcSm+eR3MHT3JGvK2oPW8b3GTFDiGkxrNKrDsNGy4
-            xbLAFmabr7b3Y8xK9dRv
-            =FFgy
+            hQGMA71EESEn7N2iAQv+MrWLqPRzd0f8PD+Qboq3LTOg3eGnBFfvs3/shssn0IvB
+            duMgpOdgBMUCrABftBHanrBNO6EFYTXbTNK0l0U8M6ESiXXC4Q18VSIzp/tb6xkd
+            4KbAbaYn3fz3L6r1XKmLpVwaYrTygHP1peyd0U1Ldzawy4nM29TVAnTZf1edYdQP
+            N5gPfU01V7aBp55gMryXN3HgneFaR+KHetg7sMrITDkyUMW0/56jzCjPAnnTV79H
+            fc5bPkrGjIuIFqIMpVZXkkptsVBJssCM3utQMzzmBUvJfxWrXstPdXic/gYzxUnd
+            JvAj3lBbHGZ6e9GoHccBFGas5/vn+nXbYx3Pqt6Nl/a6K3iateOc0yXtTdNvECgJ
+            uYb3LLPU7acZ7hapOOgVGefbKP8keBhEkhCAbthE71ywX5Blr044SilAaUkVPGpg
+            9RgC2Za44rMLyuAYvlKxxlzCSSI0+zEL9Yoo9gx9BNqGsBWEpvLkYXBvRzg2X1A3
+            NK5U0VrDjCNJXgWTvl390l4BWIPXrKaEMMoF/exlL23gK1YFLn2KbYbRl8Gpz8cH
+            SdWHxhDK7ydlsFMKjB8GjA8uJGdzF5+4q4aCCgMvEl8eh3LzesdLg68QYmTVk/Gg
+            ezuNHaHBK1c0ziff1bon
+            =/IrO
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
