wip: attempt at fixing qbittorrent not working

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -38,7 +38,7 @@ spec:
     env:
       - name: WAIT_FOR_VPN
         value: "true"
-    securityContext:
+    podSecurityContext:
       fsGroup: 1001
     persistence:
       config:
