--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -38,8 +38,8 @@ spec:
     env:
       - name: WAIT_FOR_VPN
         value: "true"
-    podSecurityContext:
-      fsGroup: 1001
+    securityContext:
+      runAsUser: 1001
     persistence:
       config:
         enabled: true
@@ -81,7 +81,8 @@ spec:
         image: shadowsocks/shadowsocks-libev:v3.3.5
         command: [ "ss-local" ]
         # nl-ams-br-001
-        args: [ "-s",  "185.65.134.66", "-p", "443", "-l", "1080", "-k", "mullvad", "-m", "aes-256-gcm" ]
+        # IP Should be added to firewall rules in gluetun
+        args: [ "-s",  "185.65.134.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "mullvad", "-m", "aes-256-gcm" ]
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 1080
@@ -107,7 +108,7 @@ spec:
             value: "/gluetun/custom/mullvad_de_fra.conf"
           # Should be the same as the shadowsocks bridge server
           - name: FIREWALL_OUTBOUND_SUBNETS
-            value: "185.213.155.66/32"
+            value: "185.65.134.66/32"
           - name: PROTOCOL
             value: "tcp"
           - name: OPENVPN_IPV6
