--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -19,9 +19,9 @@ spec:
   # https://github.com/bitnami/charts/blob/master/bitnami/external-dns/values.yaml
   values:
     image:
-      registry: gcr.io
-      repository: k8s-staging-external-dns/external-dns
-      tag: v20210616-v0.8.0-56-g35f25947-arm64v8
+      registry: k8s.gcr.io
+      repository: external-dns/external-dns
+      tag: v0.10.2
     logLevel: debug
     domainFilters:
       - "${SECRET_DOMAIN}"
