ci: attempt at fixing renovate not detecting helm values

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -13,8 +13,8 @@
   "rebaseWhen": "conflicted",
   "helm-values": {
     "fileMatch": [
-      "cluster/.+/helm-release\\.yaml$",
-    ],
+      "cluster/.+\\.ya?ml$"
+    ]
   },
   "kubernetes": {
     "fileMatch": [
