--- a/cluster/apps/kubeflow/kubeflow/kubeflow-helm-release.yaml
+++ b/cluster/apps/kubeflow/kubeflow/kubeflow-helm-release.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: syncthing
-  namespace: default
+  name: kubeflow
+  namespace: kubeflow
 spec:
   interval: 5m
   chart:
     spec:
       # renovate: registryUrl=https://getindata.github.io/helm-charts/
-      chart: syncthing
+      chart: kubeflow
       version: 1.6.2
       sourceRef:
         kind: HelmRepository
