chore: mount plex nfs directory to qbittorrent

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -49,6 +49,10 @@ spec:
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
+      plex-nfs:
+        enable: true
+        existingClaim: nfs-media-pvc
+        mountPath: "/downloads/media"
       openvpn-config:
         enabled: true
         type: "custom"
