chore: attempt at fixing plex nfs not being mounted to qbittorrent

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -51,6 +51,7 @@ spec:
         existingClaim: nfs-media-downloads-pvc
       plex-nfs:
         enable: true
+        type: "pvc"
         existingClaim: nfs-media-pvc
         mountPath: "/downloads/media"
       openvpn-config:
