chore: yet another attempt at fixing plex nfs not working

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -51,7 +51,7 @@ spec:
         existingClaim: nfs-media-downloads-pvc
       plex-nfs:
         enable: true
-        type: "pvc"
+        type: pvc
         existingClaim: nfs-media-pvc
         mountPath: "/downloads/media"
       openvpn-config:
