chore: yet another attempt at fixing  plex nfs

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -53,7 +53,7 @@ spec:
         enable: true
         type: pvc
         existingClaim: nfs-media-pvc
-        mountPath: "/downloads/media"
+        mountPath: "/media"
       openvpn-config:
         enabled: true
         type: "custom"
