--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -30,6 +30,14 @@ spec:
       server:
         http_listen_port: 3100
 
+      # Fix for too many outstanding requests, adapte from https://github.com/grafana/loki/issues/4613#issuecomment-1045993131
+      query_scheduler:
+        max_outstanding_requests_per_tenant: 2048
+
+      query_range:
+        parallelise_shardable_queries: false
+        split_queries_by_interval: 0
+
       # TODO: Use S3 / Minio instead of filesystem
       schema_config:
         configs:
