docs: final cleanup before going public

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,9 +101,11 @@ nav:
       - Setting up Raspberry Pi for k3s: 'cluster_setup/setting_up_raspberry_pi.md'
       - Installing k3s: 'cluster_setup/installing_k3s.md'
       - Setting up Flux: 'cluster_setup/setting_up_flux.md'
+      - Adding SOPS support to Flux.md: 'cluster_setup/adding_sops_support_to_flux.md'
   - Apps: 'apps/oauth2-proxy.md'
   - Miscellaneous:
       - Restrict Port Forwarding to only allow Cloudflare IPs using OpenWRT: 'miscellaneous/cloudflare_port_forwarding_openwrt.md'
+      - Cloudflare DDNS not working with OpenWRT based routers: 'miscellaneous/cloudflare_ddns_not_working_with_openwrt.md'
       - Enabling Wake on Lan on NIC: 'miscellaneous/enabling_WakeOnLan_on_NIC.md'
       - Getting MetalLB to work on Raspberry Pi 4's Wifi: 'miscellaneous/metallb_not_working_raspberry_wifi.md'
       - Tips and Tricks: 'miscellaneous/tips_and_tricks.md'
