fix(v-rising): make v-rising use LoadBalancer instead of ClusterIP

--- a/cluster/apps/default/v-rising/svc.yaml
+++ b/cluster/apps/default/v-rising/svc.yaml
@@ -3,8 +3,16 @@ kind: Service
 metadata:
   name: v-rising-svc
   namespace: default
+
+  # Needed if sharing UDP and TCP services, not sure if this is actually needed here though
+  annotations:
+    metallb.universe.tf/allow-shared-ip: v-rising
 spec:
-  type: ClusterIP
+  # Not sure why this service is needed. See https://www.debontonline.com/2021/01/part-14-deploy-plexserver-yaml-with.html
+  type: LoadBalancer
+  # Needed since plex only considers clients as local if they're on the same subnet
+  loadBalancerIP: 192.168.1.241
+  externalTrafficPolicy: Local
   selector:
     app: v-rising
   ports:
