fix(v-rising): add securityContext to deployment

--- a/cluster/apps/default/v-rising/deployment.yaml
+++ b/cluster/apps/default/v-rising/deployment.yaml
@@ -55,5 +55,7 @@ spec:
                     operator: In
                     values:
                       - k8-w1
+      securityContext:
+        runAsUser: 0
 
 
