fix(v-rising): add securityContext again

--- a/cluster/apps/default/v-rising/deployment.yaml
+++ b/cluster/apps/default/v-rising/deployment.yaml
@@ -56,6 +56,8 @@ spec:
                     values:
                       - k8-w1
       securityContext:
-        runAsUser: 0
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
 
 
