--- a/cluster/apps/default/plex/nfs-media.yaml
+++ b/cluster/apps/default/plex/nfs-media.yaml
@@ -12,7 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.201
-    path: /srv/nfs/media
+    path: /srv/nfs
   # Explanation of mount options https://www.thegeekdiary.com/common-nfs-mount-options-in-linux/
   mountOptions:
     - nfsvers=3
