--- a/cluster/apps/default/plex/nfs-media.yaml
+++ b/cluster/apps/default/plex/nfs-media.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-media
+  name: nfs-media-v1
 spec:
   storageClassName: media
   capacity:
