--- a/cluster/apps/default/qbittorent/nfs-media-downloads.yaml
+++ b/cluster/apps/default/qbittorent/nfs-media-downloads.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-media-downloads-pv
+  name: nfs-media-downloads-pv-v1
 spec:
   storageClassName: media-downloads
   capacity:
