wip(nfs): update mount path of qbittorrent

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -54,7 +54,7 @@ spec:
         enabled: true
         type: pvc
         existingClaim: nfs-media-pvc
-        mountPath: "/media_nfs"
+        mountPath: "/downloads/media"
       openvpn-config:
         enabled: true
         type: "custom"
