--- a/cluster/apps/default/v-rising/configmap.yaml
+++ b/cluster/apps/default/v-rising/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: v-rising-host-settings
+  namespace: default
 data:
   ServerHostSetting.templ: |-
     {
