--- a/cluster/apps/default/v-rising/configmap.yaml
+++ b/cluster/apps/default/v-rising/configmap.yaml
@@ -6,20 +6,20 @@ metadata:
 data:
   ServerHostSetting.templ: |-
     {
-      "Name": "${V_RISING_NAME}",
-      "Description": "${V_RISING_DESC}",
-      "Port": ${V_RISING_PORT},
-      "QueryPort": ${V_RISING_QUERY_PORT},
-      "MaxConnectedUsers": ${V_RISING_MAX_USER},
-      "MaxConnectedAdmins": ${V_RISING_MAX_ADMIN},
+      "Name": "${{V_RISING_NAME}}",
+      "Description": "${{V_RISING_DESC}}",
+      "Port": ${{V_RISING_PORT}},
+      "QueryPort": ${{V_RISING_QUERY_PORT}},
+      "MaxConnectedUsers": ${{V_RISING_MAX_USER}},
+      "MaxConnectedAdmins": ${{V_RISING_MAX_ADMIN}},
       "ServerFps": 30,
-      "SaveName": "${V_RISING_SAVE_NAME}",
-      "Password": "${V_RISING_PASSW}",
+      "SaveName": "${{V_RISING_SAVE_NAME}}",
+      "Password": "${{V_RISING_PASSW}}",
       "Secure": true,
       "ListOnMasterServer": ${V_RISING_PUBLIC_LIST},
-      "AutoSaveCount": "${V_RISING_AUTOSAVE_COUNT}",
-      "AutoSaveInterval": "${V_RISING_AUTOSAVE_INTERVAL}",
-      "GameSettingsPreset": "${V_RISING_SETTING_PRESET}",
+      "AutoSaveCount": ${{V_RISING_AUTOSAVE_COUNT}},
+      "AutoSaveInterval": ${{V_RISING_AUTOSAVE_INTERVAL}},
+      "GameSettingsPreset": "${{V_RISING_SETTING_PRESET}}",
       "AdminOnlyDebugEvents": true,
       "DisableDebugEvents": false
     }
